--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "diff": "^4.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "jsonwebtoken": "^8.1.1",
